Correct some CSS layout (padding,margin,gap etc)

--- a/style.css
+++ b/style.css
@@ -1,41 +1,50 @@
-.navbar {
-    height: 60px;
-    background-color: #131921;
-    padding: auto;
-    
-    
-  }
-  
-  #Amazon_logo {
-    
-    object-fit: contain;
-    width: 100px;
-    margin-top: 15px;
-    margin-left: 15px;
-    
-  }
-  
-
-#navbar a {
-    text-decoration: none;
-    
-    
-    
-}
-
 * {
-    padding: 0;
-    margin: 0;
-    color: white;
+  padding: 0;
+  margin: 0;
+  color: white;
 }
+
+
+.navbar {
+  height: 60px;
+  background-color: #131921;
+
+}
+
+
+.border {
+  border: 1.5px  solid transparent;
+}
+
+.border:hover {
+  border: 1.5px solid white;
+}
+
+.Amazon_logo {
+
+  object-fit: contain;
+  width: 95px;
+  height: 42px;
+  padding: 1px 8px 0px 6px;
+  margin: 5px;
+
+}
+
+
+ 
+
+
+
+
+
 
 button {
-    background-color: #f08804;
+  background-color: #f08804;
 }
 
 #logo {
-    color: #f08804;
-    font-size: 25px;
+  color: #f08804;
+  font-size: 25px;
 
 }
 
@@ -43,142 +52,133 @@ button {
 
 
 #searchbox {
-    color: black;
+  color: black;
 
 }
 
-footer {
-    margin: 0;
-    padding: 0;
-}
-
-
-
-p {
-    text-align: center;
-    
-}
 
 #content {
-    height: 541px;
-    text-align: center;
-    background-color:none;
-    color: #f08804;
+  height: 541px;
+  text-align: center;
+  background-color: none;
+  color: #f08804;
 }
 
 .backtotop a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    line-height: 50px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 50px;
 }
 
 .backtotop {
-    
-    background-color: #37475A;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+
+  background-color: #37475A;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 #backtotop {
-    text-decoration: none;
-    font-family: Amazon Ember, sans-serif;
+  text-decoration: none;
+  font-family: Amazon Ember, sans-serif;
 }
 
 .mainsection {
-    background-color: #232F3E;
-    color: white;
-    padding: 40px 200px;    
-    display: flex;
-    justify-content: space-between;  
-    align-items: flex-start;         
-    font-family: Amazon Ember, Arial, sans-serif;
-    font-size: 14px;
-    gap: 40px;
-    height: auto;
+  background-color: #232F3E;
+  color: white;
+  padding: 40px 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: Amazon Ember, Arial, sans-serif;
+  font-size: 14px;
+  gap: 40px;
+  height: auto;
 }
 
 .mainsection a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .mainsection a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 
 .section1 {
-    display: flex;   
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: auto;
-    
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-bottom: auto;
+
 }
 
 .section2 {
-    
-    display: flex;   
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: auto; 
+
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-bottom: auto;
 }
 
 .section3 {
-    display: flex;   
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: auto
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-bottom: auto
 }
 
 .section4 {
-    display: flex;   
-    flex-direction: column;
-    gap: 12px;
-    margin-bottom: auto;
-    
-    
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-bottom: auto;
+
+
 
 }
 
 .amazon-logo {
-    width: 79px;
-    display: block;
-    margin-right: 50px;
-    
+  width: 79px;
+  height: 27px;
+  display: block;
+  padding: 0px 7.2px 0px 15px;
+  margin-right: 80px;
 
-}    
+}
 
 .backtotop:hover {
-    background-color:#495768;
-    
+  background-color: #495768;
+
 }
 
 .bottom {
-    padding: 27px;
-    background-color:#232F3E;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px
-
+  padding: 27px;
+  background-color: #232F3E;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  
 }
+
 .amazon-logo1 {
-    width: 10px;
-    display: block;
+  width: 10px;
+  display: block;
 }
 
 .lang-selector {
   display: inline-flex;
   align-items: center;
   gap: 6px;
-  padding: 7px 20px ;
+  padding: 7px 20px;
   border: 1px solid #848688;
   border-radius: 4px;
   color: #ffffff;
@@ -187,7 +187,7 @@ p {
   cursor: pointer;
   background-color: transparent;
   margin-bottom: 8px;
-  
+
 }
 
 .globe {
@@ -225,19 +225,19 @@ p {
 
 
 .sectionlast {
-    background-color:
-    
+  background-color:
+
 
 }
-    
+
 .amazon-footer {
   background-color: #131A22;
   padding: 40px 60px;
   padding-top: 3px;
   font-family: Arial, Helvetica, sans-serif;
   height: auto;
-  
-  
+
+
 }
 
 .footer-container {
@@ -284,13 +284,13 @@ p {
   padding-top: 5px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
-  
+
 }
 
 .last-footertop a {
   text-decoration: none;
   line-height: 1.4;
-  
+
 }
 
 .last-footertop a:hover {
@@ -306,21 +306,7 @@ p {
   text-align: center;
   font-size: 12px;
   color: #dddddd;
-  font-family: Arial, Helvetica, sans-serif;  
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
-  
+
 }
-
-
-
-
-
-
-
-
-
-
-    
-
-
-
